--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.6"
