--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.1",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "formik": "^2.2.6",
+    "framer-motion": "^4.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^3.11.0",
+    "react-query": "^3.15.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='../public' react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
