--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
     "formik": "^2.2.6",
-    "framer-motion": "^4.1.13",
+    "framer-motion": "3.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
