--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "mongodb"
   ],
   "scripts": {
-    "dev": "npm run build && nodemon server",
-    "build": "cd client && npm run build",
-    "client-dev": "cd client && npm start"
+    "dev": "nodemon server"
   },
   "author": "Rahul Tanwar <mr.rahultanwar@gmail.com>",
   "license": "ISC",
