--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "chalk": "^4.1.1",
+    "edge.js": "^5.1.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
