--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "Rahul Tanwar <mr.rahultanwar@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@admin-bro/express": "^3.1.0",
+    "@admin-bro/mongoose": "^1.1.0",
+    "admin-bro": "^4.0.1",
     "app-root-path": "^3.0.0",
     "chalk": "^4.1.1",
     "edge.js": "^5.1.1",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
     "mustache": "^4.2.0"
